--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "clipboard": "^2.0.0",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
