--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "clipboard": "^2.0.0",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
+    "jsdom": "^11.6.2",
+    "location": "0.0.1",
+    "navigator": "^1.0.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
