--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.17.1",
     "clipboard": "^2.0.0",
     "element-ui": "2.0.8",
+    "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
     "jsdom": "^11.6.2",
     "location": "0.0.1",
