--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
+    "@tinymce/tinymce-vue": "^1.0.8",
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
@@ -63,6 +64,7 @@
     "semver": "5.4.1",
     "shelljs": "0.7.8",
     "svg-sprite-loader": "3.5.2",
+    "tinymce": "^4.7.13",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
     "vue-loader": "13.5.0",
