--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
     "webpack-dev-server": "2.9.7",
-    "webpack-merge": "4.1.1"
+    "webpack-merge": "4.1.1",
+    "xlsx": "^0.13.1"
   },
   "engines": {
     "node": ">= 4.0.0",
