--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "vue-loader": "13.5.0",
     "vue-style-loader": "3.0.3",
     "vue-template-compiler": "2.5.10",
+    "wangeditor": "^3.1.1",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
     "webpack-dev-server": "2.9.7",
