--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.0",
     "element-ui": "2.0.8",
+    "es6-promise": "^4.2.4",
     "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
     "jsdom": "^11.6.2",
@@ -73,7 +75,7 @@
     "wangeditor": "^3.1.1",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-server": "2.9.7",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "4.1.1",
     "xlsx": "^0.13.1"
   },
