--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.17.1",
     "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.0",
+    "echarts": "^4.1.0",
     "element-ui": "2.0.8",
     "es6-promise": "^4.2.4",
     "jquery": "^3.3.1",
@@ -47,6 +48,7 @@
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.2.3",
     "css-loader": "0.28.7",
+    "echarts": "^4.1.0",
     "es6-promise": "^4.2.4",
     "eslint": "4.13.1",
     "eslint-friendly-formatter": "3.0.0",
