--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "@tinymce/tinymce-vue": "^1.0.8",
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
@@ -72,15 +71,13 @@
     "svg-sprite-loader": "3.5.2",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
-    "vue-calendar-component": "^2.7.1",
     "vue-loader": "13.5.0",
     "vue-style-loader": "3.0.3",
     "wangeditor": "^3.1.1",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
     "webpack-dev-server": "^2.9.7",
-    "webpack-merge": "4.1.1",
-    "xlsx": "^0.13.1"
+    "webpack-merge": "4.1.1"
   },
   "engines": {
     "node": ">= 4.0.0",
